--- a/index.html
+++ b/index.html
@@ -8,34 +8,8 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"  type="text/javascript"></script>
 	<script type="text/javascript" src="js/script.js"></script>
 	<script type="text/javascript">
-			function getCSS()
-			{
-				var datetoday = new Date();
-				var timenow = datetoday.getTime();
-				datetoday.setTime(timenow);
-				var thehour = datetoday.getHours();
-				var dis; 	
-				if (thehour > 20)
-					dis = "css/night.css";
-				else if (thehour > 17)
-					dis = "css/sunset.css";
-				else if (thehour > 12)
-					dis = "css/afternoon.css";
-				else if (thehour > 7)
-					dis = "css/morning.css";
-				else if (thehour > 4)
-					dis = "css/sunrise.css";
-				else 
-					dis = "css/night.css";
-				var css = "<"; 
-				css+="link rel='stylesheet' href='" + dis + "' \/"; 
-				css+=">";
-				document.write(css);
-			}
-		</script>
-		<script type="text/javascript">
-			getCSS();
-		</script>
+		get_css();
+	</script>
 		<noscript>
 			<link rel="stylesheet" href="afternoon.css" type="text/css">
 		</noscript>
