--- a/quiz/index.html
+++ b/quiz/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta content="text/html; charset=utf-8" http-equiv="content-type">
 
-        <title>SlickQuiz Demo</title>
+        <title>Викторина</title>
 
         <link href="https://rawgit.com/jewlofthelotus/SlickQuiz/master/css/reset.css" media="screen" rel="stylesheet" type="text/css">
         <link href="https://rawgit.com/jewlofthelotus/SlickQuiz/master/css/slickQuiz.css" media="screen" rel="stylesheet" type="text/css">
